Adding UFO animaiton with callbacks and switch case

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -674,25 +674,28 @@ body {
       left: 50%;
       top: 50%;
       width: 20%;
-      height: auto;
+      height: 35.75%;
       transform: scaleY(1);
       cursor: pointer; }
-    .screen .screen-frame #circle-shadow {
-      display: none;
-      opacity: 0;
-      position: absolute;
-      left: 50%;
-      top: 79.6%;
-      width: 20.2%;
-      height: auto;
-      transform: scaleY(1);
-      cursor: pointer; }
+      .screen .screen-frame #spotlight #spotlight-svg {
+        width: 100%;
+        height: auto;
+        transform: scaleY(1); }
+      .screen .screen-frame #spotlight #circle-shadow {
+        display: none;
+        opacity: 0;
+        position: absolute;
+        top: 22%;
+        width: 101.3%;
+        left: -1px;
+        height: auto;
+        cursor: pointer; }
     .screen .screen-frame #pop-up-mask {
       display: none;
       opacity: 0;
       position: absolute;
       left: 50%;
-      top: 90.4%;
+      top: 91.3%;
       width: 20.2%;
       height: auto;
       transform: scaleY(1);
@@ -709,6 +712,11 @@ body {
       .screen .screen-frame #basketball #basketball-lines {
         bottom: 5px;
         position: relative; }
+    .screen .screen-frame #tractor-beam {
+      position: absolute;
+      left: 40%;
+      top: 15%;
+      opacity: 0; }
 
 .credits {
   margin-top: 25px; }
