--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -757,6 +757,17 @@ body {
       left: 90%;
       height: 33px;
       bottom: 8%; }
+    .screen .screen-frame #fried-egg #yolk {
+      position: absolute;
+      width: 10%;
+      top: 52%;
+      left: 40%;
+      z-index: 2; }
+    .screen .screen-frame #fried-egg #egg-white {
+      position: absolute;
+      width: 41%;
+      top: 52%;
+      left: 31%; }
 
 .credits {
   margin-top: 25px; }
