--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -53,6 +53,10 @@ body {
         height: auto;
         transform: scaleY(1);
       }
+      #dart-board {
+        transform: translateX(-1%) translateY(-99.5%);
+        width: 102%;
+      }
       #circle-shadow {
         display: none;
         opacity: 0;
@@ -147,21 +151,18 @@ body {
         bottom: 8%;
       }
     }
-    #fried-egg {
-      #yolk {
+
+
+    #darts {
+      .dart {
         position: absolute;
-        width: 10%;
-        top: 52%;
-        left: 40%;
+        width: 8%;
+        top: 40%;
+        left: -10%;
         z-index: 2;
       }
-      #egg-white {
-        position: absolute;
-        width: 41%;
-        top: 52%;
-        left: 31%;
-      }
     }
+
   }
 }
 
