--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -766,6 +766,30 @@ body {
       top: 40%;
       left: -10%;
       z-index: 2; }
+    .screen .screen-frame #flashlight-holder {
+      display: none;
+      position: absolute;
+      height: 20%;
+      width: 90%;
+      top: 7%; }
+      .screen .screen-frame #flashlight-holder #flashlight {
+        position: absolute;
+        width: 68%;
+        left: -68%; }
+      .screen .screen-frame #flashlight-holder #flashlight-beam {
+        position: absolute;
+        width: 111%;
+        left: 26.3%;
+        top: -36%;
+        opacity: 0;
+        display: none; }
+      .screen .screen-frame #flashlight-holder #flashlight-mask {
+        position: absolute;
+        width: 117%;
+        left: 26%;
+        top: 178%;
+        opacity: 0;
+        display: none; }
 
 .credits {
   margin-top: 25px; }
