--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -152,7 +152,6 @@ body {
       }
     }
 
-
     #darts {
       .dart {
         position: absolute;
@@ -162,7 +161,34 @@ body {
         z-index: 2;
       }
     }
-
+    #flashlight-holder {
+      display: none;
+      position: absolute;
+      height: 20%;
+      width: 90%;
+      top: 7%;
+      #flashlight {
+        position: absolute;
+        width: 68%;
+        left: -68%;
+      }
+      #flashlight-beam {
+        position: absolute;
+        width: 111%;
+        left: 26.3%;
+        top: -36%;
+        opacity: 0;
+        display: none;
+      }
+      #flashlight-mask {
+        position: absolute;
+        width: 117%;
+        left: 26%;
+        top: 178%;
+        opacity: 0;
+        display: none;
+      }
+    }
   }
 }
 
