--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -771,25 +771,38 @@ body {
       position: absolute;
       height: 20%;
       width: 90%;
-      top: 7%; }
+      top: 7%;
+      z-index: 1; }
       .screen .screen-frame #flashlight-holder #flashlight {
         position: absolute;
         width: 68%;
         left: -68%; }
+      .screen .screen-frame #flashlight-holder #flashlight-button {
+        position: absolute;
+        left: -11%;
+        top: 37%;
+        width: 7%;
+        cursor: pointer; }
       .screen .screen-frame #flashlight-holder #flashlight-beam {
         position: absolute;
         width: 111%;
-        left: 26.3%;
+        left: 31.6%;
         top: -36%;
         opacity: 0;
         display: none; }
       .screen .screen-frame #flashlight-holder #flashlight-mask {
         position: absolute;
         width: 117%;
-        left: 26%;
+        left: 31%;
         top: 178%;
         opacity: 0;
         display: none; }
+    .screen .screen-frame #mouse {
+      position: absolute;
+      width: 16%;
+      bottom: -16%;
+      right: 9%;
+      display: none; }
 
 .credits {
   margin-top: 25px; }
