--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -167,15 +167,23 @@ body {
       height: 20%;
       width: 90%;
       top: 7%;
+      z-index: 1;
       #flashlight {
         position: absolute;
         width: 68%;
         left: -68%;
       }
+      #flashlight-button {
+        position: absolute;
+        left: -11%;
+        top: 37%;
+        width: 7%;
+        cursor: pointer;
+      }
       #flashlight-beam {
         position: absolute;
         width: 111%;
-        left: 26.3%;
+        left: 31.6%;
         top: -36%;
         opacity: 0;
         display: none;
@@ -183,11 +191,18 @@ body {
       #flashlight-mask {
         position: absolute;
         width: 117%;
-        left: 26%;
+        left: 31%;
         top: 178%;
         opacity: 0;
         display: none;
       }
+    }
+    #mouse {
+      position: absolute;
+      width: 16%;
+      bottom: -16%;
+      right: 9%;
+      display: none;
     }
   }
 }
