--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -98,10 +98,11 @@ body {
     }
 
     #tractor-beam {
-      display: none;
+      // display: none;
       position: absolute;
-      left: 40%;
-      top: 15%;
+      left: 39.8%;
+      top: -18.3%;
+      width: 20.3%;
       opacity: 0;
     }
 
