--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -98,11 +98,18 @@ body {
     }
 
     #tractor-beam {
-      // display: none;
       position: absolute;
       left: 39.8%;
       top: -18.3%;
       width: 20.3%;
+      opacity: 0.8;
+    }
+
+    #abductee {
+      position: absolute;
+      left: 45.8%;
+      top: 47.7%;
+      width: 8.3%;
       opacity: 0;
     }
 
