--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -49,6 +49,7 @@ body {
       transform: scaleY(1);
       cursor: pointer;
       #spotlight-svg {
+        position: absolute;
         width: 100%;
         height: auto;
         transform: scaleY(1);
@@ -66,6 +67,13 @@ body {
         left: -1px;
         height: auto;
         cursor: pointer;
+      }
+      #minute-hand,
+      #hour-hand {
+        height: 100%;
+        position: absolute;
+        left: 47.4%;
+        display: none;
       }
     }
 
@@ -94,6 +102,15 @@ body {
         bottom: 5px;
         position: relative;
         width: 161%;
+      }
+    }
+
+    #egg {
+      #egg-white {
+        position: absolute;
+      }
+      #egg-yolk {
+        position: absolute;
       }
     }
 
@@ -126,6 +143,8 @@ body {
         width: 22%;
         left: 38.8%;
         top: -15%;
+        opacity: 0.7;
+        display: none;
       }
       #record-lines {
         width: 70%;
@@ -137,6 +156,7 @@ body {
         z-index: 2;
         bottom: 34%;
         left: 48.7%;
+        display: none;
       }
       #record-needle {
         width: 68%;
