--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -115,6 +115,14 @@ body {
       }
     }
 
+    #ufo {
+      position: absolute;
+      width: 59%;
+      top: -31%;
+      left: 20.4%;
+      z-index: 3;
+    }
+
     #tractor-beam {
       position: absolute;
       left: 39.8%;
