--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -165,6 +165,7 @@ body {
         bottom: 34%;
         left: 48.7%;
         display: none;
+        cursor: pointer;
       }
       #record-needle {
         width: 68%;
